content/docs/2.0.9/5-create-your-own-cell-template/index.mdx
---
posttype: "docs"
title: Create your own cell template
metaTitle: "Create your own cell template"
metaDescription: "metaDescription"
---

## Introduction 

Creating cell template is best way to customize data visualization and behaviour in ReactGrid.
You can define your own and then use it as other built-in cell types. 

In this example we will completly discuss how to make it.

Let's imagine that you need to implement a brand new cell for displaying country flag.

Expected functionality:

1. In edit mode cell allows to type text without any constraints
2. When cell is just display should show country flag based on cell text

Let's get started!

## 1. Prepare project file

For this tutorial we are going to use previous project - [handling changes](link).
At the begining we update columns and rows displayed by grid. 
Cell type in row `1` and `2` will be changed to `flag` at the end. 

```tsx 
const [state, setState] = React.useState(() => ({
    columns: [{ columnId: 0, width: 100 }],
    rows: [
        {
            rowId: 0,
            cells: [{ type: "header", text: "Flag" }]
        },
        {
            rowId: 1,
            cells: [{ type: "text", text: "ger" }]
        },
        {
            rowId: 2,
            cells: [{ type: "text", text: "usa" }]
        },
        {
            rowId: 3,
            cells: [{ type: "text", text: "" }]
        }
    ]
}));
```

## 2. Creating necessary files

Create new file named `FlagCellTemplate.tsx`, add the same imports like on listing below and `flag-cell-style.css`  that
will contains some CSS styles (don't forget to import it in your project's file).

```tsx 
// FlagCellTemplate.tsx
import * as React from "react";
import {
  CellTemplate,
  Cell,
  Compatible,
  Uncertain,
  UncertainCompatible,
  isNavigationKey,
  getCellProperty,
  isAlphaNumericKey,
  keyCodes
} from "@silevis/reactgrid";
import "./flag-cell-style.css";
```

## 3. Define cell data interface

`type` attribute is necessary in any cell template, in our sample we will refer to this cell template by `flag`.
`text` attribute will storage our text and it's also necessary. 

```tsx
export interface FlagCell extends Cell {
  type: "flag";
  text: string;
}
```

## 4. Creating FlagCellTemplate class

All of definded methods below are necessary to correct displaying and interfacing with internal ReactGrid model.

* `getCompatibleCell` as a parameter gets incoming cell and returns a compatible cell (with `text` and `value`
  attribute required by [`Compatible`](link) type).

```tsx
getCompatibleCell(uncertainCell: Uncertain<FlagCell>): Compatible<FlagCell> {
    const text = getCellProperty(uncertainCell, "text", "string");
    const value = parseFloat(text);
    return { ...uncertainCell, text, value };
}
```

* `handleKeyDown` method handles `keyDown` event on this cell template. Here just returns unchanged cell and enables 
  edit  mode when user performed click or pressed <kbr>enter</kbr> key.

```tsx
handleKeyDown(
    cell: Compatible<FlagCell>,
    keyCode: number,
    ctrl: boolean,
    shift: boolean,
    alt: boolean
): { cell: Compatible<FlagCell>; enableEditMode: boolean } {
    if (!ctrl && !alt && isAlphaNumericKey(keyCode))
        return { cell, enableEditMode: true };
    return {
        cell,
        enableEditMode: keyCode === keyCodes.POINTER || keyCode === keyCodes.ENTER
    };
}
```

* `update` - we are not sure that incoming cell is has the same interface like `FlagCell` so we marking it
  as `UncertainCompatible` (incoming cell has attributes provided by [`Compatible`](link) but it can have
  other attributes like `date` from `DateCell`). In our case we just copy `cell` and replace `text` value.

```tsx
update(
    cell: Compatible<FlagCell>,
    cellToMerge: UncertainCompatible<FlagCell>
): Compatible<FlagCell> {
    return this.getCompatibleCell({ ...cell, text: cellToMerge.text });
}
```

* `render` - return content of cell. In edit mode we will display HTML `input` element. Change that taking place in the 
  cell `input` is propagated outside ReactGrid by `onCellChanged` function.

```tsx
render(
    cell: Compatible<FlagCell>,
    isInEditMode: boolean,
    onCellChanged: (cell: Compatible<FlagCell>, commit: boolean) => void
): React.ReactNode {
    if (!isInEditMode) {
        const flagISO = cell.text.toLowerCase(); // ISO 3166-1, 2/3 letters
        const flagURL = `https://restcountries.eu/data/${flagISO}.svg`;
        const alternativeURL = `https://upload.wikimedia.org/wikipedia/commons/0/04/Nuvola_unknown_flag.svg`;
        return (
            <div
                className="rg-flag-wrapper"
                style={{ backgroundImage: `url(${flagURL}), url(${alternativeURL})` }}
            />
        );
    }
    return (
        <input
            ref={input => {
            input && input.focus();
            }}
            defaultValue={cell.text}
            onChange={e =>
                onCellChanged(
                    this.getCompatibleCell({ ...cell, text: e.currentTarget.value }),
                    false
                )
            }
            onCopy={e => e.stopPropagation()}
            onCut={e => e.stopPropagation()}
            onPaste={e => e.stopPropagation()}
            onPointerDown={e => e.stopPropagation()}
            onKeyDown={e => {
            if (isAlphaNumericKey(e.keyCode) || isNavigationKey(e.keyCode))
                e.stopPropagation();
            }}
        />
    );
}
```

## 5. Styling

To adjust flag as background that covers div element we made `rg-flag-wrapper` class. 
All of cell has class name created based on cell `type` attribute. In our case cell class name will be `rg-flag-cell`. 
Due to `rg-cell` is flex element we centering it's content by `justify-content: center;` attrubute.

```css
.rg-flag-cell {
  justify-content: center;
}

.rg-flag-wrapper {
  width: 50%;
  height: 80%;
  background-size: cover;
  border: 1px solid #cccccc;
  background-position: center center;
  background-repeat: no-repeat;
}
```

## 6. Finishing

Go back to `index.tsx` file and add `customCellTemplates` prop as shown below:

```tsx
return (
    <ReactGrid
      rows={state.rows}
      columns={state.columns}
      license={"non-commercial"}
      onCellsChanged={handleChanges}
      customCellTemplates={{ flag: new FlagCellTemplate() }}  //highlight-line
    />
);
```

## Result

<iframe
    src="https://codesandbox.io/embed/reactgrid-creating-new-cell-template-pdiux?fontsize=14&hidenavigation=1&theme=dark"
    style="width:100%; height:250px; border:0; border-radius: 4px; overflow:hidden;"
    title="reactgrid-creating-new-cell-template"
    allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb"
    sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
></iframe>